# discord-rpc-meson

./: README.md  discord-rpc.wrap  meson.build  meson_options.txt
example/: main.c  meson.build
